--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"react": "^16.10.2",
 		"react-dom": "^16.10.2",
 		"react-scripts": "3.2.0",
-		"request-promise": "^4.2.4"
+		"request-promise": "^4.2.4",
+		"tachyons": "^4.11.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
