--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"bcrypt": "^3.0.6",
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"js": "^0.1.0",
 		"node": "^12.12.0",
 		"nodemon": "^1.19.4",
 		"npm-run-all": "^1.0.1",
