--- a/package.json
+++ b/package.json
@@ -5,16 +5,12 @@
 	"dependencies": {
 		"bcrypt": "^3.0.6",
 		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
-		"express": "^4.17.1",
 		"js": "^0.1.0",
-		"node": "^12.12.0",
-		"nodemon": "^1.19.4",
 		"npm-run-all": "^1.0.1",
-		"react": "^16.10.2",
-		"react-dom": "^16.10.2",
+		"react": "^16.11.0",
+		"react-dom": "^16.11.0",
 		"react-scripts": "3.2.0",
 		"react-tilt": "^0.1.4",
 		"request-promise": "^4.2.4",
@@ -43,5 +39,13 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"body-parser": "^1.19.0",
+		"express": "^4.17.1",
+		"mongodb": "^3.3.3",
+		"mongoose": "^5.7.7",
+		"nodemon": "^1.19.4",
+		"socket.io": "^2.3.0"
 	}
 }
